Improve wording of "Reviewer" table
This lists PR where current user is a reviewer (self requested or
assigned by someone else / Zephyr bot), not necessarily PRs they have
*reviewed*.

Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
           { id: "author", caption: "Authored" },
           { id: "blocking", caption: "Blocked" },
           { id: "assignee", caption: "Assigned" },
-          { id: "reviewer", caption: "Reviewed" },
+          { id: "reviewer", caption: "Reviewer" },
           { id: "approved", caption: "Approved" },
           { id: "commented", caption: "Commented" },
         ];
