support light/dark theme
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,21 @@
     </style>
 
     <script type="text/javascript">
+      (() => {
+        const getPreferredTheme = () => {
+          return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
+        };
+
+        const setTheme = (theme) => {
+          document.documentElement.setAttribute("data-bs-theme", theme);
+        };
+
+        setTheme(getPreferredTheme());
+        window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", () => {
+          setTheme(getPreferredTheme());
+        });
+      })();
+
       prs = null;
 
       function saveGHUser(name) {
