separate tables with horizontal rules
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -429,13 +429,20 @@
       data-bs-threshold="0,0.1"
       class="bg-body-tertiary p-3 rounded-2">
       <table id="author" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table id="blocking" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table id="assignee" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table id="reviewer" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table id="approved" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table id="commented" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <!-- Additional tables for various types of PRs that need attention -->
       <table id="unassigned" class="table table-sm table-striped table-hover prs display"></table>
+      <hr class="border border-primary border-3 opacity-25" />
       <table
         id="only_assignee_approved"
         class="table table-sm table-striped table-hover prs display"></table>
