--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,10 @@
       type="text/css"
       href="https://cdn.datatables.net/responsive/3.0.3/css/responsive.dataTables.min.css" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" />
+
     <style>
       a {
         text-decoration: none;
