change default page length for leaderboard
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -383,6 +383,7 @@
           order: [[2, "desc"]], // default sort is assigned-desc
           stateSave: true,
           lengthChange: false,
+          pageLength: 20,
         }).caption("<i class='bi-trophy'></i> Leaderboard");
 
         const ghUsernameInput = document.getElementById("gh-username-input");
