fix rendering bug with new userLink() signature
now that userLink accepts a second optional parameter, the map() performed when rendering
user lists needs adjusting

Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -233,13 +233,23 @@
             {
               title: "Assignee",
               render: (data, type, row) =>
-                type == "display" ? data.sort(sortUsernames).map(userLink).join(", ") : data,
+                type == "display"
+                  ? data
+                      .sort(sortUsernames)
+                      .map((user) => userLink(user))
+                      .join(", ")
+                  : data,
               responsivePriority: 4,
             },
             {
               title: "Reviewers",
               render: (data, type, row) =>
-                type == "display" ? data.sort(sortUsernames).map(userLink).join(", ") : data,
+                type == "display"
+                  ? data
+                      .sort(sortUsernames)
+                      .map((user) => userLink(user))
+                      .join(", ")
+                  : data,
               className: "ellipsis narrow",
               responsivePriority: 5,
             },
