move stylesheet to its own css file
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -52,94 +52,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" />
 
-    <style>
-      a {
-        text-decoration: none;
-        color: var(--body-text-color);
-      }
-
-      a:hover {
-        color: var(--body-text-color);
-        text-decoration: underline;
-      }
-
-      #gh-username-input {
-        width: 200px;
-        padding: 10px 15px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        transition: border-color 0.3s, box-shadow 0.3s;
-        outline: none;
-      }
-
-      #gh-username-input:focus {
-        border-color: #333f67;
-        box-shadow: 0px 0px 8px rgba(51, 63, 103, 0.5);
-      }
-
-      #gh-username-input::placeholder {
-        color: #aaa;
-        font-style: italic;
-      }
-
-      #scroll-area {
-        font-size: small;
-      }
-
-      a.approved {
-        font-weight: 500;
-        color: var(--bs-form-valid-color);
-      }
-
-      a.blocked {
-        font-weight: 500;
-        color: var(--bs-form-invalid-color);
-      }
-
-      .ellipsis {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .narrow {
-        max-width: 150px;
-      }
-
-      .wide {
-        max-width: 400px;
-      }
-
-      .prs tr.draft {
-        font-style: italic;
-        opacity: 0.5;
-      }
-
-      .prs {
-        caption-side: inherit;
-      }
-
-      .prs caption {
-        font-size: 1.2em;
-        font-weight: bold;
-        padding-top: 0em;
-      }
-
-      .prs caption i {
-        background-color: transparent;
-      }
-
-      .dt-container + .dt-container {
-        margin-top: 2em;
-      }
-
-      .dt-search {
-        position: absolute;
-        right: 2em;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script type="text/javascript">
       (() => {
