always clear leaderboard before adding data
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -315,6 +315,7 @@
         populateAutocomplete(users);
 
         const leaderboard = $("#leaderboard").DataTable();
+        leaderboard.clear();
         Object.entries(users).forEach(([username, stats]) => {
           leaderboard.row.add([
             userLink(username, (internal = true)),
