clear datalist before populating autocomplete options
Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
 
       function populateAutocomplete(users) {
         const datalist = document.getElementById("usernames");
+        datalist.innerHTML = "";
         Object.keys(users)
           .sort((a, b) => a.toLowerCase().localeCompare(b.toLowerCase()))
           .forEach((username) => {
